# jichi-insight

./: .gitignore  .prettierignore  CODEOWNERS  CONTRIBUTING.md  DATA_POLICY.md  GOVERNANCE.md  README.md  SECURITY.md  package.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
docs/: ARCHITECTURE.md  ASSEMBLY_ACCOUNTABILITY.md  CORRECTIONS.md  DATA_MODEL.md  DATA_QUALITY.md  DEPLOYMENT.md  DEVELOPMENT_PLAN.md  EDITORIAL_POLICY.md  MANIFESTO_SOURCE_SEARCH.md  METHODOLOGY.md  MIYAGI_KPI_REVIEW_PROGRESS.md  NATIONWIDE_EXPANSION.md  NATIONWIDE_SOURCE_INVENTORY.md  NORTH_STAR.md  PHASE10_VERTICAL_LINKAGE.md  PHASE8_REGIONAL_ANCHORS.md  PHASE9_EXECUTION.md  POLICY_SOURCE_COLLECTION.md  PRODUCT_REQUIREMENTS.md  PROJECT_CHARTER.md  PROJECT_MEMORY.md  PROMISE_EXTRACTION.md  RELEASE_CHECKLIST.md  RISK_REGISTER.md  ROADMAP.md  SOURCE_REQUESTS.md  WAVE1_POLICY_REVIEW_QUEUE.md
pipelines/: README.md
schemas/: MANIFESTO_REVIEW.md  README.md  aichi_policy_indicator_evidence.schema.json  aichi_policy_indicator_review_manifest.schema.json  aichi_policy_indicators.schema.json  assembly.schema.json  contract.schema.json  evidence_packet.schema.json  executive_term.schema.json  fiscal_record.schema.json  hiroshima_revised_vision_indicator_review_manifest.schema.json  hiroshima_revised_vision_indicators.schema.json  hokkaido_indicator_catalog.schema.json  hokkaido_indicator_page_index.schema.json  hokkaido_indicator_relationship_index.schema.json  hokkaido_indicator_source_index.schema.json  inspection_trip.schema.json  kagawa_extended_plan_indicator_evidence.schema.json  kagawa_extended_plan_indicator_review_manifest.schema.json  kagawa_extended_plan_indicators.schema.json  kpi.schema.json  manifesto_review.schema.json  manifesto_source_search.schema.json  miyagi_indicator_catalog.schema.json  municipality.schema.json  (+59 more)
(+791 files in other folders)
