[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jichi-insight-pipelines"
version = "0.0.0"
description = "Evidence-first data pipelines for Jichi Insight"
requires-python = ">=3.12"
dependencies = [
  "beautifulsoup4>=4.13,<5",
  "jsonschema>=4.23,<5",
  "openpyxl>=3.1,<4",
  "pdfplumber>=0.11,<1",
  "python-docx>=1.2,<2",
  "requests>=2.32,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "ruff>=0.9,<1",
]

[tool.setuptools]
packages = []

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = [
  "data/raw",
  "data/extracted",
  "data/reviewed",
  "data/published",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"scripts/audit_phase9_numeric_target_sources.py" = ["E501"]
"scripts/build_phase9_reviewed_target_statements.py" = ["I001"]
"scripts/build_phase9_reviewed_target_statements_parallel.py" = ["I001"]
